[package]
name = "benches"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6.0-beta.1", features = ["unstable"] }
futures = "0.3.4"
env_logger = "0.7.1"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "tcp_echo"
harness = false

[[bench]]
name = "echo"
